force-app/main/default/objects/vf_TrainingResource__c/vf_TrainingResource__c.object-meta.xml
<CustomObject>
    <label>Training Resource</label>
    <pluralLabel>Training Resources</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Resource Name</label>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Object to store training resources for modules</description>
</CustomObject>