force-app/main/default/objects/vf_TrainingResource__c/fields/Learning_Style__c.field-meta.xml
<CustomField>
    <fullName>Learning_Style__c</fullName>
    <label>Learning Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visual</fullName>
            </value>
            <value>
                <fullName>Auditory</fullName>
            </value>
            <value>
                <fullName>Reading/Writing</fullName>
            </value>
            <value>
                <fullName>Kinesthetic</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
                <default>true</default>
                <label>Multiple</label>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Learning style the resource is best for</description>
    <inlineHelpText>The learning style this resource is best suited for</inlineHelpText>
</CustomField>