force-app/main/default/objects/vf_TrainingResource__c/fields/Training_Module__c.field-meta.xml
<CustomField>
    <fullName>Training_Module__c</fullName>
    <label>Training Module</label>
    <referenceTo>vf_TrainingModule__c</referenceTo>
    <relationshipLabel>Training Resources</relationshipLabel>
    <relationshipName>Training_Resources</relationshipName>
    <type>Lookup</type>
    <description>Training module this resource belongs to</description>
    <inlineHelpText>The training module this resource belongs to</inlineHelpText>
</CustomField>