force-app/main/default/objects/vf_TrainingResource__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Document</fullName>
            </value>
            <value>
                <fullName>Presentation</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Quiz</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Type of training resource</description>
    <inlineHelpText>The type of this training resource</inlineHelpText>
</CustomField>