force-app/main/default/objects/vf_TrainingResource__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>URL</label>
    <type>Url</type>
    <description>URL to the training resource</description>
    <inlineHelpText>The URL link to this training resource</inlineHelpText>
</CustomField>